--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "email-validator": "^2.0.4",
+    "firebase": "^9.6.11",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^5.0.3",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
