--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   "dependencies": {
     "email-validator": "^2.0.4",
     "firebase": "^9.6.11",
+    "moment": "^2.29.3",
     "next": "latest",
+    "npm": "^8.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^5.0.3",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "timeago-react": "^3.0.4"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
