--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "email-validator": "^2.0.4",
+    "emoji-picker-react": "^3.5.1",
     "firebase": "^9.6.11",
     "moment": "^2.29.3",
     "next": "latest",
